# softeng2-webapp

./: LICENSE  README.md  app.py  database.py  pyproject.toml  requirements.txt
static/: homestylesheet.css  signin.css
templates/: cartpage.html  cartsdisplaypage.html  checkoutpage.html  headinfo.html  home.html  loginpage.html  navbar.html  orderdisplaypage.html  pricecheckerpage.html  signup_form.html
